--- a/insight/webapp/templates/webapp/base.html
+++ b/insight/webapp/templates/webapp/base.html
@@ -1,4 +1,4 @@
-<!-- {% load static %} -->
+{% load static %}
 
 <!doctype html>
 <html lang="en">
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Insight{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="{% static 'css/style.css'%}"> -->
-     <link rel="stylesheet" href="../../static/css/style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css'%}">
+     {% comment %} <link rel="stylesheet" href="../../static/css/style.css"> {% endcomment %}
     <style>
         html {
             height: 100%;
