create model josaa

--- a/insight/webapp/templates/webapp/institutes.html
+++ b/insight/webapp/templates/webapp/institutes.html
@@ -23,7 +23,7 @@ Participating Insitutes
                 <td> {{ forloop.counter }} </td>
                 <td> {{ institute.name }} </td>
                 <td> {{ institute.contact }} </td>
-                <td> <a href="{{ institute.website }}" target="_blank"> {{ institute.website }} </a> </td>
+                <td> <a href="{{ institute.website }}" target="_blank" class="text-decoration-none text-primary"> {{ institute.website }} </a> </td>
             </tr>
             {% endfor %}
         </tbody>
