--- a/insight/webapp/templates/webapp/institutes.html
+++ b/insight/webapp/templates/webapp/institutes.html
@@ -13,6 +13,7 @@ Participating Insitutes
             <tr>
                 <th> Sl.No. </th>
                 <th> Institute Code and Name </th>
+                <th> Address </th>
                 <th> Email ID </th>
                 <th> Phone </th>
                 <th> Fax </th>
@@ -20,17 +21,38 @@ Participating Insitutes
             </tr>
         </thead>
         <tbody class="table-group-divider">
-            {% for institute in page_obj %}
+            {% for institute in institutes %}
             <tr>
-                <td> {{ forloop.counter }} </td>
+                <td> {{ institute.id|add:1 }} </td>
                 <td> {{ institute.name }} </td>
+                <td> {{ institute.location }} </td>
                 <td> {{ institute.email }} </td>
                 <td> {{ institute.phone }} </td>
                 <td> {{ institute.fax }} </td>
-                <td> <a href="{{ institute.website }}" target="_blank" class="text-decoration-none text-primary"> {{ institute.website }} </a> </td>
+                <td> <a href="https://{{ institute.website }}" target="_blank" class="text-decoration-none text-primary"> {{ institute.website }} </a> </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
+
+    <br>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            {% if institutes.has_previous %}
+            <li class="page-item"><a href="?page-1" class="page-link">&laquo; First</a></li>
+            <li class="page-item"><a href="?page={{ institutes.previous_page_number }}" class="page-link">Previous</a></li>
+            {% endif %}
+        
+            {% comment %} <li class="page-item"><a href="#" class="page-link disabled">Page {{ institutes.number }} of {{ institutes.paginator.num_pages }}</a></li> {% endcomment %}
+            {% for i in nums %}
+            <li class="page-item {% if i == institutes.number %}active{% endif %}"><a href="?page={{ i }}" class="page-link">{{ forloop.counter }}</a></li>
+            {% endfor %}
+            {% if institutes.has_next %}
+            <li class="page-item"><a href="?page={{ institutes.next_page_number }}" class="page-link">Next</a></li>
+            <li class="page-item"><a href="?page={{ institutes.paginator.num_pages }}" class="page-link">Last &raquo;</a></li>
+            {% endif %}
+        </ul>
+    </nav>
+
 </div>
 {% endblock %}
