--- a/insight/webapp/templates/webapp/base.html
+++ b/insight/webapp/templates/webapp/base.html
@@ -97,11 +97,18 @@
 
     <!-- footer -->
     <footer>
-      <div class="row justify-content-center mb-0 pt-5 pb-0 row-2 px-3">
+      <div class="row justify-content-center mb-0 pt-3 pb-0 row-2 px-3">
           <div class="col-12">
                <div class="row row-2">
                    <div class="col-sm-3 text-md-center"><h5><b>  Insight</b></h5></div>
-                   <div class="col-sm-3  my-sm-0 mt-5"><ul class="list-unstyled"><li class="mt-0">Platform</li><li>Help Center</li><li>Security</li></ul></div>
+                   <div class="col-sm-3  my-sm-0 mt-5">
+                      <ul class="list-unstyled">
+                        <li class="mt-0"><a href="https://josaa.nic.in/" target="_blank" class="text-decoration-none " style="color: inherit;">JOSAA</a></li>
+                        <li><a href="https://csab.nic.in/" target="_blank" class="text-decoration-none " style="color: inherit;">CSAB</a></li>
+                        <li><a href="https://jeemain.nta.nic.in/" target="_blank" class="text-decoration-none " style="color: inherit;">JEE Mains</a></li>
+                        <li><a href="https://jeeadv.ac.in/" target="_blank" class="text-decoration-none " style="color: inherit;">JEE Advanced</a></li>
+                      </ul>
+                    </div>
                    <div class="col-sm-3  my-sm-0 mt-5"><ul class="list-unstyled"><li class="mt-0">Customers</li><li>Use Cases</li><li>Customers Services</li></ul></div>
                    <div class="col-sm-3  my-sm-0 mt-5"><ul class="list-unstyled"><li class="mt-0">Company</li><li>About</li><li>Careers- <span class="Careers">We're-hiring</span></li></ul></div>
                </div>  
