--- a/insight/webapp/templates/webapp/institutes.html
+++ b/insight/webapp/templates/webapp/institutes.html
@@ -45,7 +45,7 @@ Participating Insitutes
         
             {% comment %} <li class="page-item"><a href="#" class="page-link disabled">Page {{ institutes.number }} of {{ institutes.paginator.num_pages }}</a></li> {% endcomment %}
             {% for i in nums %}
-            <li class="page-item {% if i == institutes.number %}active{% endif %}"><a href="?page={{ i }}" class="page-link">{{ forloop.counter }}</a></li>
+            <li class="page-item {% if forloop.counter == institutes.number %}active{% endif %}"><a href="?page={{ forloop.counter }}" class="page-link">{{ forloop.counter }}</a></li>
             {% endfor %}
             {% if institutes.has_next %}
             <li class="page-item"><a href="?page={{ institutes.next_page_number }}" class="page-link">Next</a></li>
